...
  static String addressLine2Text = "Address Line 2";
  static String aboutProductText = "About Product";
  static String addToOrderText = "Add to Order";
  static String activeOffersText = "Active Offers";
  static String addOfferText = "Add Offer";
  static String addNewOfferText = "Add New Offer";
  static String activeOrderText = "Active Orders";
  static String activeText = "Active";
  static String archiveText = "Archive";
  static String addANewStoreText = "Add a new store";
...
  static String authenticationText = "Authentication";
  static String authenticatedText = "authenticated";
  static String addCardText = "Add Card";
  static String addNewCardText = "Add New Card";
  static String autoReloadIntoWalletText = "Auto Reload into Wallet";
  static String addCardPaymentMethodsText = "Add Cards / Payment Methods";
  static String addBankAccountDebitMethodsText =
      "Add Bank Account / Debit Methods";
...
  static String connectAccountText = "Connect Account";
  static String confirmSelectionText = "Confirm Selection";
  static String cardNumberText = "Card Number";
  static String createYourAccountText = "Create your Account";
  static String createStripeAccountText = "Create Stripe Account";
...
  static String createAccountDetailText =
      "Enter your details to create an\naccount";
  static String continueAsGuestText = "Continue as Guest";
  static String cardAndPaymentsText = "Cards & Payments";
  static String contactUsText = "Contact us";
...
  static String cityText = "City";
  static String closeText = "Close";
  static String clearFiltersText = "Clear Filters";
  static String collectTheIdentityInfoText = "Collect the Identity Info";
  static String curbSideText = "Curb-side";
  static String cartText = "Cart";
  static String cvvText = "CVV";
  static String cardHolderNameText = "Card Holder Name";
...
  static String categoriesNameText = "Categories Name";
  static String categoryNameText = "Category Name";
  static String categoriesText = "Categories";
  static String completedOrders = "Completed Orders";
  static String contactText = "Contact Store";
  static String currentMonthText = "Current Month";
  static String contentsAndStrainsText = "Contents and Strains";
  static String customTimeText = "Custom Time";
  static String cancelText = "Cancel";
  static String canceReturnlText = "Cancel Return";
  static String cancelledText = "Cancelled";
  static String createYourText = "Create your";
  static String checkOutText = "Check Out";
  static String clickCollectText = "Click & Collect";
  static String completedText = "Completed";
  static String completeText = "Complete";
  static String completeReturnOrderText = "Complete Return Order";
  static String cancelOrderText = "Cancel Order";
...
  static String firstNameText = "First Name";
  static String faceIdText = "Face ID";
  static String favoriteText = "Favorite";
  static String favoritesText = "Favorites";
  static String fromWherePhotoText =
      "From where do you want to take the photo?";
...
  static String featuredProductText = "Featured product";
  static String featuredText = "Featured";
  static String filterOptionsText = "Filter Options";
  static String findStoreText = "Find Store";
  static String febText = "February";
...
  static String payAPersonText = "P2P";
  static String payABusinessText = "P2B";
  static String munchiesText = "Munchies";
  static String herbsText = "Herbs";
  static String paymentsText = "Payments";
  static String storeTypeText = "Store Type";
  static String generalStoreTypeText = "General";
...
  static String inStoreText = "In-store";
  static String itemAddedInCart = "Item added in cart";
  static String itemsText = "Items";
  static String inProgress = "In-progress";
  static String imageText = "Image";
...

  //L
  static String loginYourAccountText = "Login your account";
  static String loginText = "Login";
  static String lastNameText = "Last Name";
...
      '. Message and data rates may apply.';
  static String moreText = "More";
  static String manageText = "Manage";
  static String menuText = "Menu";
  static String mobileText = "Mobile";
  static String myStoreText = "My Store";
  static String manageStoreText = "Manage Store";
...
  static String marchText = "March";
  static String mayText = "May";
  static String milesText = "Miles";
  static String monthlyPlanText = "Monthly Plan";
  static String masterCardText = "MasterCard";
...
  static String ordersConfirmationNumberText = "Order Confirmation Number";
  static String orderText = "Order";
  static String orderSummaryText = "Order Summary";
  static String offerNameText = "Offer Name";
  static String orderType = "Order Type";
...
  static String privacyPolicyText = "Privacy Policy";
  static String pickUpLocationText = "Pickup Location";
  static String pastOrdersText = "Past Orders";
  static String productNameText = "Product Name";
  static String pricePerUnitText = "Price Per Unit";
...
  static String productText = "Product";
  static String productsText = "Products";
  static String payNowText = "Pay Now";
  static String priceText = "Price";
  static String pendingText = "Pending";
...
  static String storesText = "Stores";
  static String storeHoursText = "Store hours: 24/7 hours";
  static String storeHourText = "Store Hours";
  static String successText = "Success";
  static String sendConfirmationCodeText = "Send Confirmation Code";
  static String securityText = "Security";
  static String searchForStoreText = "Search for Store";
  static String storeOffersAndDiscountText = "Store offers & Discounts";
  static String submitText = "Submit";
  static String saveText = "Save";
  static String saveAndAddProductText = "Save and Add Product";
  static String saveAndUpdateCategoryText = "Save and Update Category";
...
  static String storeTermsOfService = "Store Terms of service";
  static String storePolicyText = "Store Policy";
  static String subtotalText = "Subtotal";
  static String serviceFeesText = "Service fees";
  static String selectLocationText = "Select Location";
...
      " and acknowledge the receipts of the green mall Inc’s ";
  static String termsAndConditions3Text = "Privacy policy";
  static String transactionHistoryText = "Transaction History";
  static String transactionsHistoryText = "Transactions History";
  static String townOrCityText = "Town or City";
  static String tippingReceiptsAndOrdersText = "Tipping, Receipts and orders";
  static String totalText = "Total";
  static String transactionTypeText = "Transaction Type";
  static String transactionText = "Transaction";
...

  //V
  static String verificationCodeText = "Verification code";
  static String verificationCodeSentText =
      "We have sent the code verification to your mobile number ";
...
  static String walletText = "Wallet";
  static String welcomeText = "Welcome";
  static String welcomeToText = "Welcome to";
  static String weightText = "Weight";
  static String workingDaysText = "Working Days";
...

  //Z
  static String zipCodeText = "Zip Code";
  static String zoneText = "Zone (State or Province)";
  // Guest prompts
...
