...
                                                  MainAxisAlignment
                                                      .spaceBetween,
                                              children: [
                                                Row(
                                                  children: [
                                                    const Text(
                                                      "Unit Price: ",
                                                      style: TextStyle(
                                                          fontSize: 16.0,
                                                          color:
                                                              AppColors.black,
                                                          fontWeight:
                                                              FontWeight.w400),
...
