...
            hint: Text(
              StringConstants.storeOpeningText,
              style: TextStyle(
                color: AppColors.blackLight,
              ),
            ),
            items: <String>["Open Now", "Closed"].map((String value) {
              return DropdownMenuItem<String>(
                value: value,
                child: Text(
                  value,
                  style: TextStyle(
                      color: AppColors.black,
...
