appId: com.thegreenmall
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: "Login your account"
    timeout: 15000
- tapOn: "Login your account"
- extendedWaitUntil:
    visible: "Send Confirmation Code"
    timeout: 15000
- takeScreenshot: login_screen
- assertVisible: "Enter mobile number to login your account"
